--- a/machine-learning/pt-model.ipynb
+++ b/machine-learning/pt-model.ipynb
@@ -60,7 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = datasets.ImageNet(DATA_PATH, transform=transform)"
+    "ds_x = datasets.ImageNet(DATA_PATH_X, transform=transform)\n",
+    "ds_y = datasets.ImageNet(DATA_PATH_Y, transform=transform)"
    ]
   },
   {
