implemented data splitter

--- a/machine-learning/pt-3model.ipynb
+++ b/machine-learning/pt-3model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,18 @@
     "DATA_PATH_Y = 'clean/y-data'\n",
     "CODES_PATH = \"clean/codes.txt\"\n",
     "BATCH_SIZE = 4\n",
-    "IMG_SIZE = (128)"
+    "IMG_SIZE = (128)\n",
+    "VALID_PER = 0.8\n",
+    "SEED = 42"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pandas as pd\n",
     "from torchvision.io import read_image\n",
     "\n",
     "class CustomImageDataset(Dataset):\n",
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,17 +83,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset = CustomImageDataset(DATA_PATH_X, DATA_PATH_Y, transform=MyTransform(IMG_SIZE))\n",
-    "dls =  torch.utils.data.DataLoader(dset, batch_size=BATCH_SIZE)"
+    "def split_calculator(data, valid_per):\n",
+    "    number_of_file = len(os.listdir(data))\n",
+    "    split_length = [valid_per*number_of_file, (1-valid_per)*number_of_file]\n",
+    "    return [round(split_length[0]), round(split_length[1])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dset = CustomImageDataset(DATA_PATH_X, DATA_PATH_Y, transform=MyTransform(IMG_SIZE))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split_length = split_calculator(DATA_PATH_X, VALID_PER)\n",
+    "training_dset, validation_dset = torch.utils.data.random_split(dset, split_length, generator=torch.Generator().manual_seed(SEED))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_dls = torch.utils.data.DataLoader(training_dset, batch_size=BATCH_SIZE, shuffle=True)\n",
+    "validation_dls = torch.utils.data.DataLoader(validation_dset, batch_size=BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def status_logger(dls):\n",
+    "    for X, y in dls:\n",
+    "        print(f\"Shape of X [N, C, H, W]: {X.shape}\")\n",
+    "        print(f\"Shape of y: {y.shape} {y.dtype}\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -100,15 +145,15 @@
      "output_type": "stream",
      "text": [
       "Shape of X [N, C, H, W]: torch.Size([4, 1, 128, 128])\n",
-      "Shape of y: torch.Size([4, 1, 128, 128]) torch.float32\n"
+      "Shape of y: torch.Size([4, 1, 128, 128]) torch.float32\n",
+      "Shape of X [N, C, H, W]: torch.Size([2, 1, 128, 128])\n",
+      "Shape of y: torch.Size([2, 1, 128, 128]) torch.float32\n"
      ]
     }
    ],
    "source": [
-    "for X, y in dls:\n",
-    "    print(f\"Shape of X [N, C, H, W]: {X.shape}\")\n",
-    "    print(f\"Shape of y: {y.shape} {y.dtype}\")\n",
-    "    break"
+    "status_logger(training_dls)\n",
+    "status_logger(validation_dls)"
    ]
   },
   {
@@ -120,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +228,7 @@
        "torch.Size([20, 1, 128, 128])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +277,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(dataloader, model, loss_fn):\n",
+    "    size = len(dataloader.dataset)\n",
+    "    num_batches = len(dataloader)\n",
+    "    model.eval()\n",
+    "    test_loss, correct = 0, 0\n",
+    "    with torch.no_grad():\n",
+    "        for X, y in dataloader:\n",
+    "            # X, y = X.to(device), y.to(device)\n",
+    "            pred = model(X)\n",
+    "            test_loss += loss_fn(pred, y).item()\n",
+    "            correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
+    "    test_loss /= num_batches\n",
+    "    correct /= size\n",
+    "    print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -241,29 +308,34 @@
      "text": [
       "Epoch 1\n",
       "-------------------------------\n",
-      "loss: 0.454311  [    0/  858]\n",
-      "loss: 0.038451  [  400/  858]\n",
-      "loss: 0.026869  [  800/  858]\n",
+      "loss: 0.423451  [    0/    6]\n",
+      "Test Error: \n",
+      " Accuracy: 3400.0%, Avg loss: 0.452557 \n",
+      "\n",
       "Epoch 2\n",
       "-------------------------------\n",
-      "loss: 0.073936  [    0/  858]\n",
-      "loss: 0.025417  [  400/  858]\n",
-      "loss: 0.025735  [  800/  858]\n",
+      "loss: 0.421149  [    0/    6]\n",
+      "Test Error: \n",
+      " Accuracy: 3400.0%, Avg loss: 0.452557 \n",
+      "\n",
       "Epoch 3\n",
       "-------------------------------\n",
-      "loss: 0.059718  [    0/  858]\n",
-      "loss: 0.021228  [  400/  858]\n",
-      "loss: 0.021297  [  800/  858]\n",
+      "loss: 0.424698  [    0/    6]\n",
+      "Test Error: \n",
+      " Accuracy: 3400.0%, Avg loss: 0.452557 \n",
+      "\n",
       "Epoch 4\n",
       "-------------------------------\n",
-      "loss: 0.053381  [    0/  858]\n",
-      "loss: 0.017154  [  400/  858]\n",
-      "loss: 0.023573  [  800/  858]\n",
+      "loss: 0.423451  [    0/    6]\n",
+      "Test Error: \n",
+      " Accuracy: 3400.0%, Avg loss: 0.452557 \n",
+      "\n",
       "Epoch 5\n",
       "-------------------------------\n",
-      "loss: 0.053134  [    0/  858]\n",
-      "loss: 0.015619  [  400/  858]\n",
-      "loss: 0.022245  [  800/  858]\n",
+      "loss: 0.416659  [    0/    6]\n",
+      "Test Error: \n",
+      " Accuracy: 3400.0%, Avg loss: 0.452557 \n",
+      "\n",
       "Done!\n"
      ]
     }
@@ -272,7 +344,8 @@
     "epochs = 5\n",
     "for t in range(epochs):\n",
     "    print(f\"Epoch {t+1}\\n-------------------------------\")\n",
-    "    train(dls, model, loss_fn, optimizer)\n",
+    "    train(training_dls, model, loss_fn, optimizer)\n",
+    "    test(validation_dls, model, loss_fn)\n",
     "print(\"Done!\")"
    ]
   },
@@ -379,18 +452,11 @@
    "source": [
     "transforms.ToPILImage()(y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('fastai')",
+   "display_name": "Python 3.7.13 ('pt-dml')",
    "language": "python",
    "name": "python3"
   },
@@ -409,7 +475,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ef2e8a0485ff57ee407a25f71772b040025efc0ca0a35f1571a51591b5255e3f"
+    "hash": "eae6dce419e48ec1dac9e80ec1af61bd4b8cebba0f886fcf135ededea45471c9"
    }
   }
  },
