--- a/machine-learning/pt-3model.ipynb
+++ b/machine-learning/pt-3model.ipynb
@@ -1,6 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Convulation Neural Network - Pytorch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Possible Improvements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- higher image resolution\n",
+    "- larger kernel sizes\n",
+    "- more conovultional layers\n",
+    "- data augmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
@@ -19,6 +50,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -28,10 +66,17 @@
     "DATA_PATH_X = 'clean/x-data'\n",
     "DATA_PATH_Y = 'clean/y-data'\n",
     "CODES_PATH = \"clean/codes.txt\"\n",
-    "BATCH_SIZE = 4\n",
+    "BATCH_SIZE = 32\n",
     "IMG_SIZE = (128)\n",
     "VALID_PER = 0.8\n",
     "SEED = 42"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom Dateset and Dataloader"
    ]
   },
   {
@@ -164,6 +209,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Structure"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -174,7 +242,7 @@
     "        # call the parent constructor\n",
     "        super(LSNet, self).__init__()\n",
     "        self.conv_part = torch.nn.Sequential(\n",
-    "            torch.nn.Conv2d(1, 16, kernel_size=11, stride=4, padding=2),\n",
+    "            torch.nn.Conv2d(1, 16, kernel_size=7, stride=4, padding=2),\n",
     "            torch.nn.ReLU(inplace=True),\n",
     "            torch.nn.MaxPool2d(kernel_size=3, stride=2),\n",
     "            torch.nn.Conv2d(16, 32, kernel_size=5, padding=2),\n",
@@ -185,7 +253,7 @@
     "            torch.nn.MaxPool2d(kernel_size=3, stride=2)\n",
     "        )\n",
     "        self.deconv_part = torch.nn.Sequential(\n",
-    "            torch.nn.ConvTranspose2d(64, 32, kernel_size=11, stride=4, padding=2),\n",
+    "            torch.nn.ConvTranspose2d(64, 32, kernel_size=7, stride=4, padding=2),\n",
     "            torch.nn.ReLU(inplace=True),\n",
     "            torch.nn.Upsample(scale_factor=2, mode='bilinear'),\n",
     "            torch.nn.ConvTranspose2d(32, 16, kernel_size=5, padding=2),\n",
@@ -208,6 +276,16 @@
    "outputs": [],
    "source": [
     "model = LSNet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)"
    ]
   },
   {
@@ -241,12 +319,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss_fn = nn.MSELoss()\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)"
+    "print(f\"Model structure: {model}\\n\\n\")\n",
+    "\n",
+    "for name, param in model.named_parameters():\n",
+    "    print(f\"Layer: {name} | Size: {param.size()} | Values : {param[:2]} \\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training and Testing functions"
    ]
   },
   {
@@ -270,7 +357,7 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        if batch % 100 == 0:\n",
+    "        if batch % 20 == 0:\n",
     "            loss, current = loss.item(), batch * len(X)\n",
     "            print(f\"loss: {loss:>7f}  [{current:>5d}/{size:>5d}]\")"
    ]
@@ -295,6 +382,13 @@
     "    test_loss /= num_batches\n",
     "    correct /= size\n",
     "    print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f} \\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training"
    ]
   },
   {
@@ -341,12 +435,18 @@
     }
    ],
    "source": [
-    "epochs = 5\n",
     "for t in range(epochs):\n",
     "    print(f\"Epoch {t+1}\\n-------------------------------\")\n",
     "    train(training_dls, model, loss_fn, optimizer)\n",
     "    test(validation_dls, model, loss_fn)\n",
     "print(\"Done!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model postprocessing and evaluation"
    ]
   },
   {
