--- a/machine-learning/pt-3model.ipynb
+++ b/machine-learning/pt-3model.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,12 +123,14 @@
     "        resized_img = transforms.Resize(size=self.img_size)(x)\n",
     "        pil_img =transforms.ToPILImage()(resized_img)\n",
     "        gray_img = transforms.functional.to_grayscale(pil_img, num_output_channels=1)\n",
-    "        return transforms.ToTensor()(gray_img) "
+    "        fliped_img = transforms.RandomHorizontalFlip()(gray_img)\n",
+    "        rotated_img = transforms.RandomRotation(degrees=(0, 180))(fliped_img)\n",
+    "        return transforms.ToTensor()(rotated_img) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,15 +184,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of X [N, C, H, W]: torch.Size([4, 1, 128, 128])\n",
-      "Shape of y: torch.Size([4, 1, 128, 128]) torch.float32\n",
+      "Shape of X [N, C, H, W]: torch.Size([6, 1, 128, 128])\n",
+      "Shape of y: torch.Size([6, 1, 128, 128]) torch.float32\n",
       "Shape of X [N, C, H, W]: torch.Size([2, 1, 128, 128])\n",
       "Shape of y: torch.Size([2, 1, 128, 128]) torch.float32\n"
      ]
