--- a/machine-learning/pt-3model.ipynb
+++ b/machine-learning/pt-3model.ipynb
@@ -46,7 +46,8 @@
     "import torch\n",
     "from torch import nn\n",
     "import numpy as np\n",
-    "import os "
+    "import os \n",
+    "import random"
    ]
   },
   {
@@ -104,8 +105,7 @@
     "        image = read_image(img_path)\n",
     "        label = read_image(label_path)\n",
     "        if self.transform:\n",
-    "            image = self.transform(image)\n",
-    "            label = self.transform(label)\n",
+    "            image, label = self.transform(image, label)\n",
     "        return image, label"
    ]
   },
@@ -119,13 +119,24 @@
     "    def __init__(self, img_size):\n",
     "        self.img_size = (img_size, img_size)\n",
     "\n",
-    "    def __call__(self, x):\n",
+    "    def __call__(self, img, lbl):\n",
+    "        rotage_angle = int(random.random()*180)\n",
+    "        flip_bool = True if random.random() > 0.5 else False\n",
+    "        img = self.transform(img, rotage_angle, flip_bool)\n",
+    "        lbl = self.transform(lbl, rotage_angle, flip_bool)\n",
+    "        return img, lbl\n",
+    "        \n",
+    "\n",
+    "    def transform(self, x, rotage_angle, flip_bool):\n",
     "        resized_img = transforms.Resize(size=self.img_size)(x)\n",
     "        pil_img =transforms.ToPILImage()(resized_img)\n",
     "        gray_img = transforms.functional.to_grayscale(pil_img, num_output_channels=1)\n",
-    "        fliped_img = transforms.RandomHorizontalFlip()(gray_img)\n",
-    "        rotated_img = transforms.RandomRotation(degrees=(0, 180))(fliped_img)\n",
-    "        return transforms.ToTensor()(rotated_img) "
+    "        rotated_img = transforms.functional.rotate(gray_img, rotage_angle)\n",
+    "        if flip_bool:\n",
+    "            fliped_img = transforms.functional.vflip(rotated_img)\n",
+    "            return transforms.ToTensor()(fliped_img) \n",
+    "        else:\n",
+    "            return transforms.ToTensor()(rotated_img)"
    ]
   },
   {
@@ -191,10 +202,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of X [N, C, H, W]: torch.Size([6, 1, 128, 128])\n",
-      "Shape of y: torch.Size([6, 1, 128, 128]) torch.float32\n",
-      "Shape of X [N, C, H, W]: torch.Size([2, 1, 128, 128])\n",
-      "Shape of y: torch.Size([2, 1, 128, 128]) torch.float32\n"
+      "Shape of X [N, C, H, W]: torch.Size([32, 1, 128, 128])\n",
+      "Shape of y: torch.Size([32, 1, 128, 128]) torch.float32\n",
+      "Shape of X [N, C, H, W]: torch.Size([32, 1, 128, 128])\n",
+      "Shape of y: torch.Size([32, 1, 128, 128]) torch.float32\n"
      ]
     }
    ],
@@ -558,7 +569,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('pt-dml')",
+   "display_name": "Python 3.7.13 ('fastai')",
    "language": "python",
    "name": "python3"
   },
@@ -577,7 +588,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "eae6dce419e48ec1dac9e80ec1af61bd4b8cebba0f886fcf135ededea45471c9"
+    "hash": "ef2e8a0485ff57ee407a25f71772b040025efc0ca0a35f1571a51591b5255e3f"
    }
   }
  },
